@@ -26,7 +26,6 @@ public class Hotel extends Edificio {
 
             if (getSolar().getHipotecada()) {
                 throw new SolarHipotecadoException("Esta casilla esta hipotecada, no puedes construir.");
-
             }
 
             if (esMaxEdificios() == -1) {
@@ -35,12 +34,10 @@ public class Hotel extends Edificio {
 
             if (propietario.getFortuna() < getCosteEdificio()) {
                 throw new FondosInsuficientesException("No tienes suficiente dinero para construir.");
-
             }
 
             if (getSolar().getCasas().getNumEdificios() < 4) {
                 throw new ComandoIncompletoException("No puedes construir un hotel, debes tener 4 casas edificadas.");
-
             }
 
             propietario.setFortuna(propietario.getFortuna() - getCosteEdificio());
@@ -50,9 +47,8 @@ public class Hotel extends Edificio {
             getSolar().casillahacostado = getSolar().casillahacostado + getCosteEdificio();
             // Se borran las 4 casas de la lista de ids
             for (int i = 0; i < 4; i++) {
-                getSolar().getCasas().getIds().remove(getSolar().getCasas().getIds().size() - 1);
+                getSolar().getCasas().getIds().removeLast();
             }
-
             propietario.valorpropiedades = propietario.valorpropiedades + getCosteEdificio();
             getSolar().getHoteles().setNumEdificios(getSolar().getHoteles().getNumEdificios() + 1);
             crearIDedif("Hotel");
